k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coacha-app
  labels:
    app: coacha
