k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coacha-svc
  namespace: coacha-app
  labels:
    app: coacha
spec:
  # ClusterIP = acessível só dentro do cluster
  # O Ingress faz o papel de expor externamente
  type: ClusterIP
  selector:
    app: coacha
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
